# django-inertia-react-example

./: README.md  db.sqlite3  pyproject.toml
backend/: settings.py  urls.py  views.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/pages/Index/: index.tsx
templates/: base.html
