[tool.poetry]
name = "django-inertia-react-example"
version = "0.1.0"
description = ""
authors = ["dhythm <yuta.okada.20@gmail.com>"]
readme = "README.md"
packages = [{include = "django_inertia_react_example"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
